--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /android/app/build/
 /android/app/src/main/assets/index.android.bundle
 /android/app/src/main/java/
+/android/keystore.properties
 /android/app/src/main/res/drawable-hdpi/node_modules_reactnavigation_stack_src_assets_backicon.png
 /android/app/src/main/res/drawable-mdpi/node_modules_reactnavigation_stack_src_assets_backicon.png
 /android/app/src/main/res/drawable-xhdpi/node_modules_reactnavigation_stack_src_assets_backicon.png
@@ -17,6 +18,7 @@
 #
 # iOS
 /ios/
+
 
 # Xcode
 #
