--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@supabase/supabase-js": "^2.57.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-blob-util": "^0.22.2",
+    "react-native-config": "^1.5.9",
     "react-native-dotenv": "^3.4.11",
-    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
